--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.8",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-select": "^1.2.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
