--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "next": "13.3.0",
