--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "keen-slider": "^6.8.5",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
