--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@phosphor-icons/react": "^2.0.8",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
