Implement service page (mobile) (#36)
* Add the banner

* Add the location and duration info and provider quick info

* Add service info and user review component

* Add keen-slider (dep)

* Add types

* Add service image slick

* Add radix progress bar (dep)

* Add progress bar and separate the form

* Create intl formatter hooks

* Implement the rating input

* Implement the text area component

* Implement the checkbox component

* Add form interactivity

* Add review data storage hook

* Add new config for schema

* Style the form header

* Add ref

Reason because next/link with legacy behavior, is being a baby and complains about ref not being passed

* Add keys  to the image slider

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@phosphor-icons/react": "^2.0.8",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -20,6 +21,7 @@
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "keen-slider": "^6.8.5",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
