--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
