--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/uuid": "^9.0.1",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "keen-slider": "^6.8.5",
     "next": "13.3.0",
