--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@lukemorales/query-key-factory": "^1.2.0",
     "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
+    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query-devtools": "^4.29.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
