Admin Implemention #1 - Login, category listing and creation  (#43)
* Add statics assets to the app

* Implement the login page layout

* Add logic to the login page

* Add loading spinner for the primary button

* Add the dashboard page and layout

* Add admin layout

* Add categories page

* Create the select component

* Add the categories listing

* Add image input

* Add the category form

* Implement the new category form

* Config axios

* Create the category create and upload functions

* Add and config react query

* Add the category mutatioon

* Add react hot toast

* Add category listing

* Add admin authentication

* Created the ensure authenticated middleware for admin

* Add the ensure authenticated

* Create the by slug api function

* Create danger button component

* Create the category details page

* Add states

* Implement filtering

--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
-    "@phosphor-icons/react": "^2.0.8",
+    "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
+    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query-devtools": "^4.29.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "keen-slider": "^6.8.5",
     "next": "13.3.0",
@@ -28,10 +31,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
