--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
-    "@phosphor-icons/react": "^2.0.9",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
@@ -25,6 +24,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "keen-slider": "^6.8.5",
+    "lucide-react": "^0.223.0",
     "next": "13.4.4",
     "postcss": "8.4.21",
     "react": "18.2.0",
