--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "classnames": "^2.3.2",
     "keen-slider": "^6.8.5",
     "lucide-react": "^0.223.0",
-    "next": "13.4.4",
+    "next": "13.4.5",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +39,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3"
+    "@tailwindcss/forms": "^0.5.3",
+    "debug": "^4.3.4"
   }
 }
