--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-query": "^4.29.7",
