--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-query": "^4.29.7",
@@ -26,6 +28,7 @@
     "keen-slider": "^6.8.5",
     "lucide-react": "^0.223.0",
     "next": "13.4.2",
+    "plaiceholder": "^3.0.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
