--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "keen-slider": "^6.8.5",
     "lucide-react": "^0.258.0",
     "next": "13.4.2",
