--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^3.1.0",
     "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-select": "^1.2.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
     "@types/node": "18.15.11",
@@ -25,9 +27,10 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "keen-slider": "^6.8.5",
-    "lucide-react": "^0.223.0",
-    "next": "13.4.2",
+    "lucide-react": "^0.258.0",
+    "next": "13.4.8",
     "plaiceholder": "^3.0.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
