Add the experience info CRUD api calls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["Actividades", "Kisalu", "Plaiceholder"],
+  "cSpell.words": ["Actividades", "actualizar", "Kisalu", "Plaiceholder"],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
