--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-number-format": "^5.2.2",
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.1",
