--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.6",
-    "debug": "^4.3.4"
+    "supports-color": "8.1.1",
+    "debug": "^4.3.4",
+    "@tailwindcss/forms": "^0.5.6"
   }
 }
