--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "sharp": "^0.32.6",
     "tailwindcss": "3.3.1",
     "typescript": "5.1.3",
+    "use-server": "^0.4.9",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "supports-color": "8.1.1",
+    "@tailwindcss/forms": "^0.5.6",
     "debug": "^4.3.4",
-    "@tailwindcss/forms": "^0.5.6"
+    "supports-color": "8.1.1"
   }
 }
