--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "date-fns": "^2.30.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.258.0",
-    "next": "13.5.4",
+    "next": "13.5.3",
     "plaiceholder": "^3.0.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.4.1",
     "react-number-format": "^5.3.1",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.1",
     "typescript": "5.1.3",
     "use-server": "^0.4.9",
